@@ -1,3 +1,10 @@
+2002-08-01  Chris Blumenberg  <cblu@apple.com>
+
+	Fixed: 2970530 - Command keys are not getting passed in to plugins
+
+        * Plugins.subproj/WebPluginView.m:
+        (-[WebPluginView performKeyEquivalent:]):
+
 2002-08-01  Richard Williamson (Local)  <rjw@apple.com>
 
         More back/forward word.  Support for restoring scroll position.
